sjc/src/main/java/sjc/parser/StaticJavaASTAltParser.java
// $ANTLR 3.5 /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g 2013-07-08 19:31:25

package sjc.parser;

import java.math.BigInteger;

/**
 * StaticJava parser.
 *
 * @author robby
 */


import org.antlr.runtime.*;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class StaticJavaASTAltParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGN_STMT", "BINARY_EXP", "BODY", 
		"BOOLEAN", "CLASS_DEF", "COMP_UNIT", "END", "FALSE_LIT", "FIELD_DECL", 
		"ID", "IF_STMT", "INT", "INT_LIT", "INVOKE_EXP", "INVOKE_STMT", "LIST", 
		"LOCAL_DECL", "MAIN_DECL", "METHOD_DECL", "NUM_INT", "OPTION", "PARAM", 
		"PAREN_EXP", "RETURN_STMT", "TRUE_LIT", "TYPE", "UNARY_EXP", "VAR_REF_EXP", 
		"VOID", "WHILE_STMT", "WS", "'!'", "'!='", "'%'", "'&&'", "'('", "')'", 
		"'*'", "'+'", "','", "'-'", "'.'", "'/'", "';'", "'<'", "'<='", "'='", 
		"'=='", "'>'", "'>='", "'['", "']'", "'boolean'", "'class'", "'else'", 
		"'false'", "'if'", "'int'", "'public'", "'return'", "'static'", "'true'", 
		"'void'", "'while'", "'{'", "'||'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int ASSIGN_STMT=4;
	public static final int BINARY_EXP=5;
	public static final int BODY=6;
	public static final int BOOLEAN=7;
	public static final int CLASS_DEF=8;
	public static final int COMP_UNIT=9;
	public static final int END=10;
	public static final int FALSE_LIT=11;
	public static final int FIELD_DECL=12;
	public static final int ID=13;
	public static final int IF_STMT=14;
	public static final int INT=15;
	public static final int INT_LIT=16;
	public static final int INVOKE_EXP=17;
	public static final int INVOKE_STMT=18;
	public static final int LIST=19;
	public static final int LOCAL_DECL=20;
	public static final int MAIN_DECL=21;
	public static final int METHOD_DECL=22;
	public static final int NUM_INT=23;
	public static final int OPTION=24;
	public static final int PARAM=25;
	public static final int PAREN_EXP=26;
	public static final int RETURN_STMT=27;
	public static final int TRUE_LIT=28;
	public static final int TYPE=29;
	public static final int UNARY_EXP=30;
	public static final int VAR_REF_EXP=31;
	public static final int VOID=32;
	public static final int WHILE_STMT=33;
	public static final int WS=34;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public StaticJavaASTAltParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public StaticJavaASTAltParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return StaticJavaASTAltParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g"; }


	    @Override
	    public void reportError(RecognitionException arg0) {
	      throw new RuntimeException(arg0);
	    }


	public static class compilationUnit_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "compilationUnit"
	// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:77:1: compilationUnit : classDefinition EOF -> ^( COMP_UNIT classDefinition ) ;
	public final StaticJavaASTAltParser.compilationUnit_return compilationUnit() throws RecognitionException {
		StaticJavaASTAltParser.compilationUnit_return retval = new StaticJavaASTAltParser.compilationUnit_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope classDefinition1 =null;

		Object EOF2_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_classDefinition=new RewriteRuleSubtreeStream(adaptor,"rule classDefinition");

		try {
			// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:78:2: ( classDefinition EOF -> ^( COMP_UNIT classDefinition ) )
			// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:78:4: classDefinition EOF
			{
			pushFollow(FOLLOW_classDefinition_in_compilationUnit196);
			classDefinition1=classDefinition();
			state._fsp--;

			stream_classDefinition.add(classDefinition1.getTree());
			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_compilationUnit200);  
			stream_EOF.add(EOF2);

			// AST REWRITE
			// elements: classDefinition
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 79:40: -> ^( COMP_UNIT classDefinition )
			{
				// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:79:43: ^( COMP_UNIT classDefinition )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(COMP_UNIT, "COMP_UNIT"), root_1);
				adaptor.addChild(root_1, stream_classDefinition.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		 
		 /**
		  * Eliminate rule error recovery so that all parse errors 
		  * cause exceptions to propogate out of the top-level parse
		  * method.  
		  */

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "compilationUnit"


	public static class classDefinition_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "classDefinition"
	// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:82:1: classDefinition : tb= 'public' 'class' ID '{' mainMethodDeclaration ( fieldDeclaration | methodDeclaration )* te= '}' -> ^( CLASS_DEF[$tb] ID mainMethodDeclaration ^( LIST ( fieldDeclaration )* ) ^( LIST ( methodDeclaration )* ) END[$te] ) ;
	public final StaticJavaASTAltParser.classDefinition_return classDefinition() throws RecognitionException {
		StaticJavaASTAltParser.classDefinition_return retval = new StaticJavaASTAltParser.classDefinition_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token tb=null;
		Token te=null;
		Token string_literal3=null;
		Token ID4=null;
		Token char_literal5=null;
		ParserRuleReturnScope mainMethodDeclaration6 =null;
		ParserRuleReturnScope fieldDeclaration7 =null;
		ParserRuleReturnScope methodDeclaration8 =null;

		Object tb_tree=null;
		Object te_tree=null;
		Object string_literal3_tree=null;
		Object ID4_tree=null;
		Object char_literal5_tree=null;
		RewriteRuleTokenStream stream_68=new RewriteRuleTokenStream(adaptor,"token 68");
		RewriteRuleTokenStream stream_57=new RewriteRuleTokenStream(adaptor,"token 57");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_70=new RewriteRuleTokenStream(adaptor,"token 70");
		RewriteRuleTokenStream stream_62=new RewriteRuleTokenStream(adaptor,"token 62");
		RewriteRuleSubtreeStream stream_fieldDeclaration=new RewriteRuleSubtreeStream(adaptor,"rule fieldDeclaration");
		RewriteRuleSubtreeStream stream_mainMethodDeclaration=new RewriteRuleSubtreeStream(adaptor,"rule mainMethodDeclaration");
		RewriteRuleSubtreeStream stream_methodDeclaration=new RewriteRuleSubtreeStream(adaptor,"rule methodDeclaration");

		try {
			// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:83:2: (tb= 'public' 'class' ID '{' mainMethodDeclaration ( fieldDeclaration | methodDeclaration )* te= '}' -> ^( CLASS_DEF[$tb] ID mainMethodDeclaration ^( LIST ( fieldDeclaration )* ) ^( LIST ( methodDeclaration )* ) END[$te] ) )
			// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:83:4: tb= 'public' 'class' ID '{' mainMethodDeclaration ( fieldDeclaration | methodDeclaration )* te= '}'
			{
			tb=(Token)match(input,62,FOLLOW_62_in_classDefinition254);  
			stream_62.add(tb);

			string_literal3=(Token)match(input,57,FOLLOW_57_in_classDefinition256);  
			stream_57.add(string_literal3);

			ID4=(Token)match(input,ID,FOLLOW_ID_in_classDefinition258);  
			stream_ID.add(ID4);

			char_literal5=(Token)match(input,68,FOLLOW_68_in_classDefinition260);  
			stream_68.add(char_literal5);

			pushFollow(FOLLOW_mainMethodDeclaration_in_classDefinition264);
			mainMethodDeclaration6=mainMethodDeclaration();
			state._fsp--;

			stream_mainMethodDeclaration.add(mainMethodDeclaration6.getTree());
			// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:85:3: ( fieldDeclaration | methodDeclaration )*
			loop1:
			while (true) {
				int alt1=3;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==64) ) {
					switch ( input.LA(2) ) {
					case 56:
						{
						int LA1_3 = input.LA(3);
						if ( (LA1_3==ID) ) {
							int LA1_6 = input.LA(4);
							if ( (LA1_6==47) ) {
								alt1=1;
							}
							else if ( (LA1_6==39) ) {
								alt1=2;
							}

						}

						}
						break;
					case 61:
						{
						int LA1_4 = input.LA(3);
						if ( (LA1_4==ID) ) {
							int LA1_6 = input.LA(4);
							if ( (LA1_6==47) ) {
								alt1=1;
							}
							else if ( (LA1_6==39) ) {
								alt1=2;
							}

						}

						}
						break;
					case 66:
						{
						alt1=2;
						}
						break;
					}
				}

				switch (alt1) {
				case 1 :
					// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:85:5: fieldDeclaration
					{
					pushFollow(FOLLOW_fieldDeclaration_in_classDefinition270);
					fieldDeclaration7=fieldDeclaration();
					state._fsp--;

					stream_fieldDeclaration.add(fieldDeclaration7.getTree());
					}
					break;
				case 2 :
					// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:86:5: methodDeclaration
					{
					pushFollow(FOLLOW_methodDeclaration_in_classDefinition276);
					methodDeclaration8=methodDeclaration();
					state._fsp--;

					stream_methodDeclaration.add(methodDeclaration8.getTree());
					}
					break;

				default :
					break loop1;
				}
			}

			te=(Token)match(input,70,FOLLOW_70_in_classDefinition300);  
			stream_70.add(te);

			// AST REWRITE
			// elements: methodDeclaration, mainMethodDeclaration, ID, fieldDeclaration
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 87:40: -> ^( CLASS_DEF[$tb] ID mainMethodDeclaration ^( LIST ( fieldDeclaration )* ) ^( LIST ( methodDeclaration )* ) END[$te] )
			{
				// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:87:43: ^( CLASS_DEF[$tb] ID mainMethodDeclaration ^( LIST ( fieldDeclaration )* ) ^( LIST ( methodDeclaration )* ) END[$te] )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CLASS_DEF, tb), root_1);
				adaptor.addChild(root_1, stream_ID.nextNode());
				adaptor.addChild(root_1, stream_mainMethodDeclaration.nextTree());
				// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:89:47: ^( LIST ( fieldDeclaration )* )
				{
				Object root_2 = (Object)adaptor.nil();
				root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(LIST, "LIST"), root_2);
				// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:89:54: ( fieldDeclaration )*
				while ( stream_fieldDeclaration.hasNext() ) {
					adaptor.addChild(root_2, stream_fieldDeclaration.nextTree());
				}
				stream_fieldDeclaration.reset();

				adaptor.addChild(root_1, root_2);
				}

				// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:90:47: ^( LIST ( methodDeclaration )* )
				{
				Object root_2 = (Object)adaptor.nil();
				root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(LIST, "LIST"), root_2);
				// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:90:54: ( methodDeclaration )*
				while ( stream_methodDeclaration.hasNext() ) {
					adaptor.addChild(root_2, stream_methodDeclaration.nextTree());
				}
				stream_methodDeclaration.reset();

				adaptor.addChild(root_1, root_2);
				}

				adaptor.addChild(root_1, (Object)adaptor.create(END, te));
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		 
		 /**
		  * Eliminate rule error recovery so that all parse errors 
		  * cause exceptions to propogate out of the top-level parse
		  * method.  
		  */

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "classDefinition"


	public static class mainMethodDeclaration_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "mainMethodDeclaration"
	// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:94:1: mainMethodDeclaration : tb= 'public' 'static' 'void' id1= ID {...}? '(' id2= ID '[' ']' {...}?id3= ID ')' '{' methodBody te= '}' -> ^( MAIN_DECL[$tb] $id3 methodBody END[$te] ) ;
	public final StaticJavaASTAltParser.mainMethodDeclaration_return mainMethodDeclaration() throws RecognitionException {
		StaticJavaASTAltParser.mainMethodDeclaration_return retval = new StaticJavaASTAltParser.mainMethodDeclaration_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token tb=null;
		Token id1=null;
		Token id2=null;
		Token id3=null;
		Token te=null;
		Token string_literal9=null;
		Token string_literal10=null;
		Token char_literal11=null;
		Token char_literal12=null;
		Token char_literal13=null;
		Token char_literal14=null;
		Token char_literal15=null;
		ParserRuleReturnScope methodBody16 =null;

		Object tb_tree=null;
		Object id1_tree=null;
		Object id2_tree=null;
		Object id3_tree=null;
		Object te_tree=null;
		Object string_literal9_tree=null;
		Object string_literal10_tree=null;
		Object char_literal11_tree=null;
		Object char_literal12_tree=null;
		Object char_literal13_tree=null;
		Object char_literal14_tree=null;
		Object char_literal15_tree=null;
		RewriteRuleTokenStream stream_66=new RewriteRuleTokenStream(adaptor,"token 66");
		RewriteRuleTokenStream stream_68=new RewriteRuleTokenStream(adaptor,"token 68");
		RewriteRuleTokenStream stream_55=new RewriteRuleTokenStream(adaptor,"token 55");
		RewriteRuleTokenStream stream_40=new RewriteRuleTokenStream(adaptor,"token 40");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_64=new RewriteRuleTokenStream(adaptor,"token 64");
		RewriteRuleTokenStream stream_70=new RewriteRuleTokenStream(adaptor,"token 70");
		RewriteRuleTokenStream stream_62=new RewriteRuleTokenStream(adaptor,"token 62");
		RewriteRuleTokenStream stream_54=new RewriteRuleTokenStream(adaptor,"token 54");
		RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
		RewriteRuleSubtreeStream stream_methodBody=new RewriteRuleSubtreeStream(adaptor,"rule methodBody");

		try {
			// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:95:2: (tb= 'public' 'static' 'void' id1= ID {...}? '(' id2= ID '[' ']' {...}?id3= ID ')' '{' methodBody te= '}' -> ^( MAIN_DECL[$tb] $id3 methodBody END[$te] ) )
			// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:95:4: tb= 'public' 'static' 'void' id1= ID {...}? '(' id2= ID '[' ']' {...}?id3= ID ')' '{' methodBody te= '}'
			{
			tb=(Token)match(input,62,FOLLOW_62_in_mainMethodDeclaration554);  
			stream_62.add(tb);

			string_literal9=(Token)match(input,64,FOLLOW_64_in_mainMethodDeclaration556);  
			stream_64.add(string_literal9);

			string_literal10=(Token)match(input,66,FOLLOW_66_in_mainMethodDeclaration558);  
			stream_66.add(string_literal10);

			id1=(Token)match(input,ID,FOLLOW_ID_in_mainMethodDeclaration567);  
			stream_ID.add(id1);

			if ( !(( "main".equals(id1.getText()) )) ) {
				throw new FailedPredicateException(input, "mainMethodDeclaration", " \"main\".equals(id1.getText()) ");
			}
			char_literal11=(Token)match(input,39,FOLLOW_39_in_mainMethodDeclaration582);  
			stream_39.add(char_literal11);

			id2=(Token)match(input,ID,FOLLOW_ID_in_mainMethodDeclaration586);  
			stream_ID.add(id2);

			char_literal12=(Token)match(input,54,FOLLOW_54_in_mainMethodDeclaration588);  
			stream_54.add(char_literal12);

			char_literal13=(Token)match(input,55,FOLLOW_55_in_mainMethodDeclaration590);  
			stream_55.add(char_literal13);

			if ( !(( "String".equals(id2.getText()) )) ) {
				throw new FailedPredicateException(input, "mainMethodDeclaration", " \"String\".equals(id2.getText()) ");
			}
			id3=(Token)match(input,ID,FOLLOW_ID_in_mainMethodDeclaration607);  
			stream_ID.add(id3);

			char_literal14=(Token)match(input,40,FOLLOW_40_in_mainMethodDeclaration614);  
			stream_40.add(char_literal14);

			char_literal15=(Token)match(input,68,FOLLOW_68_in_mainMethodDeclaration616);  
			stream_68.add(char_literal15);

			pushFollow(FOLLOW_methodBody_in_mainMethodDeclaration618);
			methodBody16=methodBody();
			state._fsp--;

			stream_methodBody.add(methodBody16.getTree());
			te=(Token)match(input,70,FOLLOW_70_in_mainMethodDeclaration622);  
			stream_70.add(te);

			// AST REWRITE
			// elements: methodBody, id3
			// token labels: id3
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleTokenStream stream_id3=new RewriteRuleTokenStream(adaptor,"token id3",id3);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 101:40: -> ^( MAIN_DECL[$tb] $id3 methodBody END[$te] )
			{
				// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:101:43: ^( MAIN_DECL[$tb] $id3 methodBody END[$te] )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(MAIN_DECL, tb), root_1);
				adaptor.addChild(root_1, stream_id3.nextNode());
				adaptor.addChild(root_1, stream_methodBody.nextTree());
				adaptor.addChild(root_1, (Object)adaptor.create(END, te));
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		 
		 /**
		  * Eliminate rule error recovery so that all parse errors 
		  * cause exceptions to propogate out of the top-level parse
		  * method.  
		  */

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "mainMethodDeclaration"


	public static class fieldDeclaration_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "fieldDeclaration"
	// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:106:1: fieldDeclaration : tb= 'static' type ID te= ';' -> ^( FIELD_DECL[$tb] type ID END[$te] ) ;
	public final StaticJavaASTAltParser.fieldDeclaration_return fieldDeclaration() throws RecognitionException {
		StaticJavaASTAltParser.fieldDeclaration_return retval = new StaticJavaASTAltParser.fieldDeclaration_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token tb=null;
		Token te=null;
		Token ID18=null;
		ParserRuleReturnScope type17 =null;

		Object tb_tree=null;
		Object te_tree=null;
		Object ID18_tree=null;
		RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_64=new RewriteRuleTokenStream(adaptor,"token 64");
		RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");

		try {
			// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:107:2: (tb= 'static' type ID te= ';' -> ^( FIELD_DECL[$tb] type ID END[$te] ) )
			// /Users/robby/Workspaces/SireumV2/compiler-sjc/src-sjc/sjc/parser/StaticJavaASTAlt.g:107:4: tb= 'static' type ID te= ';'
			{
			tb=(Token)match(input,64,FOLLOW_64_in_fieldDeclaration750);  
			stream_64.add(tb);

			pushFollow(FOLLOW_type_in_fieldDeclaration752);
			type17=type();
			state._fsp--;

			stream_type.add(type17.getTree());
			ID18=(Token)match(input,ID,FOLLOW_ID_in_fieldDeclaration754);  
			stream_ID.add(ID18);

			te=(Token)match(input,47,FOLLOW_47_in_fieldDeclaration758);  
			stream_47.add(te);

			// AST REWRITE
			// elements: type, ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);
